syntax = "proto3";
package api;
import "enum.proto";

message Balance  {
  int64                                balance_id              = 1; 
  int64                                currency_id             = 2;
  string                               currency_description    = 3;
  int64                                user_id                 = 4;  
  double                               balance                 = 5;  
  double                               available               = 6; 
  double                               hold                    = 7; 
}

message BalanceRequest { 
   string                              token                     = 1;  
   int64                               balance_id                = 2;
   int64                               currency_id               = 3;
}

message BalanceResponse { 
   Retcode                             retcode                   = 1;
   repeated Balance                    balances                  = 2; 
   string                              comment                   = 3;   
   string                              elapsed                   = 4;  
}

message BalancePostRequest {
   string                              token                     = 1; 
   Balance                             balance                   = 2;     
   Action                              action                    = 3;
}

message BalancePostResponse { 
   Retcode                             retcode                   = 1; 
   string                              comment                   = 2;   
   string                              elapsed                   = 3; 
}

// ####################################################################

message AccountBalance  {
  int64                                balance_id              = 1; 
  int64                                currency_id             = 2;
  string                               currency_description    = 3;
  int64                                account_id              = 4;
  string                               account_description     = 5;    
  int64                                user_id                 = 6;
  int64                                venue_id                = 7;
  string                               venue_description       = 8; 
  double                               balance                 = 9; 
  double                               available               = 10; 
  double                               hold                    = 11; 
}

message AccountsBalancesRequest { 
   string                              token                     = 1;  
   int64                               account_id                = 2;
   int64                               venue_id                  = 3;
   int64                               currency_id               = 4;
}

message AccountsBalancesResponse { 
   Retcode                             retcode                   = 1;
   repeated AccountBalance             balances                  = 2; 
   string                              comment                   = 3;   
   string                              elapsed                   = 4;  
}


message AccountBalancePostRequest {
   string                              token                     = 1; 
   AccountBalance                      account_balance           = 2;     
   Action                              action                    = 3;
}

message AccountBalancePostResponse { 
   Retcode                             retcode                   = 1; 
   string                              comment                   = 2;   
   string                              elapsed                   = 3; 
}