syntax = "proto3";
package api;
import "enum.proto";

message Product { 
   int32                               product_id                  = 1; 
   int32                               venue_id                    = 2; 
   string                              kind                        = 3; 
   int32                               base_currency               = 4; 
   int32                               quote_currency              = 5; 
   bool                                individual_connection       = 6; 
   bool                                streaming_save              = 7; 
   string                              venue_symbol_identifier     = 8; 
   double                              minimum_orders_size         = 9; 
   double                              step_size                   = 10; 
   int32                               price_precision             = 11; 
   double                              maker_fee                   = 12; 
   double                              taker_fee                   = 13; 
   bool                                enabled                     = 14; 
   string                              settlement                  = 15; 
   string                              expiration                  = 16; 
}

message ProductRequest { 
   string                              token                     = 1;  
   string                              product_id                = 2;     
   AccountMode                         name                      = 3; 
}

message ProductResponse { 
   Retcode                             retcode                   = 1;
   repeated Product                    currencies                = 2; 
   string                              comment                   = 3;   
   string                              elapsed                   = 4;  
}

message ProductPostRequest {
   string                              token                     = 1; 
   Product                             product                   = 2;     
   Action                              action                    = 3;
}

message ProductPostResponse { 
   Retcode                             retcode                   = 1; 
   string                              comment                   = 2;   
   string                              elapsed                   = 3; 
}