
syntax = "proto3";
package west4API;
import "enum.proto";

message DataFeed { 
   int32                               datafeed_id               = 1;   
   string                              datafeed_description      = 2;
   int32                               venue_id                  = 3;   
   string                              venue_description         = 4;
   int32                               container_id              = 5;   
   string                              server_id                 = 6;
   string                              server_description        = 7;
   string                              streaming_server          = 8;
   string                              event_server              = 9;
   int64                               memory_reservation        = 10;
   int64                               memory_limit              = 11;
   int32                               cpu                       = 12;
   int32                               restart_policy            = 13;
   repeated DataFeedProduct            products                  = 14;
   repeated DataFeedEnv                env                       = 15;
}

message DataFeedProduct { 
   int32                               product_id               = 1;   
   string                              product_description      = 2;   
}
message DataFeedEnv { 
   string                              name                     = 1;   
   string                              value                    = 2;   
}

message DataFeedRequest { 
   string                              token                     = 1;  
   int32                               datafeed_id               = 2;   
   int32                               venue_id                  = 3;       
}

message DataFeedResponse { 
   Retcode                             retcode                   = 1;
   repeated DataFeed                   datafeed                 = 2; 
   string                              comment                   = 3;   
   string                              elapsed                   = 4;  
}

message DataFeedPostRequest {
   string                              token                     = 1; 
   DataFeed                            datafeed                 = 2;     
   Action                              action                    = 3;
}

message DataFeedPostResponse { 
   Retcode                             retcode                   = 1; 
   string                              comment                   = 2;   
   string                              elapsed                   = 3; 
}